# elex4699forklift

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  SERVER_README.md  calibration.yaml  main.cpp
.TESTS/0   CameraTest/: CMakeLists.txt
.TESTS/0   CameraTest/headers/: CameraTest.hpp
.TESTS/1   ArUcoTest/: CMakeLists.txt
.TESTS/1   ArUcoTest/headers/: ArUcoTest.hpp
.TESTS/1   ArUcoTest/source/: ArUcoTest.cpp
.TESTS/2   VideoStreamTest/: test-camera.bat
.TESTS/2   VideoStreamTest/client/: CMakeLists.txt
.TESTS/2   VideoStreamTest/client/headers/: RCameraClient.hpp
.TESTS/2   VideoStreamTest/server/: CMakeLists.txt
.TESTS/2   VideoStreamTest/server/headers/: RCameraServer.hpp
.TESTS/3   ExternCameraTest/: CMakeLists.txt  main.cpp
.TESTS/3   ExternCameraTest/headers/: ExternCameraTest.hpp  RExternCamera.hpp
.TESTS/3   ExternCameraTest/source/: ExternCameraTest.cpp
.TESTS/3.5 CoordinateHelperTest/: main.cpp
.TESTS/3.5 CoordinateHelperTest/source/: ArUcoTest.cpp
.TESTS/4   AutoPilotTest/: CMakeLists.txt  main.cpp
.TESTS/4   AutoPilotTest/headers/: AutoPilotTest.hpp
.TESTS/4   AutoPilotTest/source/: AutoPilotTest.cpp
.TESTS/5   AutoForkTest/: CMakeLists.txt  main.cpp
.TESTS/5   AutoForkTest/headers/: AutoForkTest.hpp
.TESTS/5   AutoForkTest/source/: AutoForkTest.cpp
.TESTS/6   ArUcoTest with distance/: CMakeLists.txt  calibration.yaml
.TESTS/6   ArUcoTest with distance/headers/: ArUcoTest.hpp
.TESTS/6   ArUcoTest with distance/source/: ArUcoTest.cpp
.TESTS/7   PlanarArUcoTest/: CMakeLists.txt  calibration.yaml
.TESTS/7   PlanarArUcoTest/headers/: ArUcoTest.hpp
.TESTS/7   PlanarArUcoTest/source/: ArUcoTest.cpp
.TESTS/7.5 SIMPLEArUcoTest/: CMakeLists.txt  main.cpp
.TESTS/7.5 SIMPLEArUcoTest/headers/: ArUcoTest.hpp  KalmanFilter3D.hpp
.TESTS/7.5 SIMPLEArUcoTest/source/: ArUcoTest.cpp  KalmanFilter3D.cpp  Median.cpp
.TESTS/ArUcoTest/: CMakeLists.txt
.TESTS/ArUcoTest/source/: ArUcoTest.cpp
.TESTS/ExternCameraTest/headers/: ExternCameraTest.hpp
.TESTS/ExternCameraTest/source/: ExternCameraTest.cpp
.TESTS/VideoStreamTest/client/source/: RCameraClient.cpp
.TESTS/VideoStreamTest/server/headers/: RCameraServer.hpp
.dox/: mainpage.dox
CALIBRATION/: CMakeLists.txt  calibration.yaml  main.cpp
CALIBRATION/headers/: RCameraCalibration.hpp
CALIBRATION/source/: RCameraCalibration.cpp
CLIENT/: CMakeLists.txt  README.md  main.cpp
CLIENT/headers/: RArUcoReader.hpp  RArUcoTag.hpp  RArUcoTag3.hpp  RAutoFork.hpp  RAutoPilot.hpp  RControlEvent.hpp  RCoordinateHelper.hpp  RDraw.hpp  RForkliftClient.hpp  RJoystickEvent.hpp  RMotorWriter.hpp  RNetClient.hpp  RPiCamera.hpp  RVidReceiver.hpp
CLIENT/headers/ext/: CControl.h  CJoystickPosition.hpp  Serial.h  getstuff.h
CLIENT/source/: RArUcoReader.cpp  RArUcoTag.cpp  RArUcoTag3.cpp  RAutoFork.cpp  RAutoPilot.cpp  RCoordinateHelper.cpp  RDraw.cpp  RForkliftClient.cpp  RMotorWriter.cpp  RNetClient.cpp  RPiCamera.cpp  RVidReceiver.cpp
CLIENT/source/RForkliftClient/: HelperFunctions.cpp  Menu.cpp  Service.cpp  Setup.cpp  Tests.cpp  Threads.cpp
CLIENT/source/ext/: CControl.cpp  Client.cpp  Serial.cpp  getstuff.cpp
TESTS/ArUcoTest/: CMakeLists.txt
TESTS/ArUcoTest/headers/: ArUcoTest.hpp
TESTS/ArUcoTest/source/: ArUcoTest.cpp
TESTS/VideoStreamTest/client/: main.cpp
TESTS/VideoStreamTest/client/headers/: RCameraClient.hpp
TESTS/VideoStreamTest/server/: CMakeLists.txt  main.cpp
TESTS/VideoStreamTest/server/headers/: RCameraServer.hpp
TESTS/VideoStreamTest/server/source/: RCameraServer.cpp
headers/: ForkliftConstants.h  RArUcoReader.hpp  RArUcoTag.hpp  RArUcoTag3.hpp  RAutoFork.hpp  RAutoPath.hpp  RAutoPilot.hpp  RControl.hpp  RCoordinateHelper.hpp  RExternCamera.hpp  RForkliftManager.hpp  RMotorDriver.hpp  RMotorDriverF.hpp  RNetServer.hpp  RPiCamera.hpp  RPiEncoder.hpp  RPiForklift.hpp  RPiHMotor.hpp  RPiMotor.hpp  RPiServo.hpp  RPointVect.h  RVidStream.hpp  build_info.hpp  build_info.hpp.in
headers/Pathfinder/: RPathMap.hpp  RPathNode.hpp  RPathfinder.hpp
headers/ext/: server.h
shared/headers/: ForkliftConstants.h  RControlEvent.hpp  RJoystickEvent.hpp
shared/headers/ext/: CControlTypes.h  Client.h  server.h
shared/source/: RControlEvent.cpp  RJoystickEvent.cpp
shared/source/ext/: CJoystickPosition.cpp  Client.cpp  server.cpp
source/: RArUcoReader.cpp  RArUcoTag.cpp  RArUcoTag3.cpp  RAutoFork.cpp  RAutoPilot.cpp  RControl.cpp  RCoordinateHelper.cpp  RExternCamera.cpp  RForkliftManager.cpp  RForkliftManager_commandhandling.cpp  RMotorDriver.cpp  RMotorDriverF.cpp  RNetServer.cpp  RPiCamera.cpp  RPiEncoder.cpp  RPiForklift.cpp  RPiHMotor.cpp  RPiMotor.cpp  RPiServo.cpp  RVidStream.cpp
source/Pathfinder/: RPathMap.cpp  RPathNode.cpp
source/RForkliftManager/: CommandHandling.cpp  RForkliftManager.cpp  Terminal.cpp
source/ext/: server.cpp
tiva/: README.md
tiva/Firmware/: Firmware.ino
